--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,9 @@
 
 @layer base {
   body {
-    @apply font-body text-white;
+    @apply font-body text-black;
+    @apply bg-[#e9e1e1f6] text-white !scrollbar-thin !scrollbar-track-transparent
+    !scrollbar-thumb-slate-600;
   }
 }
 
