getting total price in cart

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,8 @@
 
 @layer base {
   body {
-    @apply font-body text-black;
-    @apply bg-[#e9e1e1f6] text-white !scrollbar-thin !scrollbar-track-transparent
+    @apply font-body;
+    @apply bg-[#e9e1e1f6] text-black !scrollbar-thin !scrollbar-track-transparent
     !scrollbar-thumb-slate-600 scrollbar-track-rounded-full scrollbar-thumb-rounded-full;
   }
 }
